# kaizen

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  OVERVIEW.md  README.md  docker-compose.yml  idea.excalidraw  pyproject.toml
.github/workflows/: docs.yml
alembic/: env.py
alembic/versions/: 001_create_core_tables.py  002_add_evaluator_config.py  003_add_job_metadata_progress_step.py  004_prompt_store_versioning.py  005_github_pr_config.py  006_add_traces_table.py  007_add_prompt_file_columns.py  008_add_auto_eval_columns.py  009_git_provider_columns.py  010_add_judge_score_column.py  011_add_task_mode_column.py  012_add_original_prompt_column.py  013_add_optimizer_type_column.py  014_change_optimizer_default_to_gepa.py  015_add_existing_prompt_text.py
dashboard/: Dockerfile  package-lock.json  package.json  tailwind.config.ts
docs/: Dockerfile  next.config.mjs  package-lock.json  package.json  tsconfig.json
docs/app/: layout.jsx
docs/content/: _meta.js  index.mdx
src/: __main__.py  config.py  database.py
src/api/: auth.py  errors.py  main.py  schemas.py
src/models/: base.py
src/sdk/: pyproject.toml
src/sdk/kaizen_sdk/: __init__.py  async_client.py  cache.py  client.py  core.py  detect.py  exceptions.py  instrument.py  models.py
src/sdk/tests/: test_async_client.py  test_cache.py  test_client.py  test_client_smoke.py  test_exceptions.py  test_models.py
src/services/: auto_pr.py  bitbucket_provider.py  git_provider.py  github_pr.py  github_provider.py  (+2 more)
tests/: conftest.py  test_api.py  test_config.py  test_feedback_loop.py
(+70 files in other folders)
