[project]
name = "kaizen-sdk"
version = "0.1.0"
description = "Python SDK for Kaizen — feedback logging, prompt retrieval, optimization triggers"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27,<1",
    "pydantic>=2.0,<3",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.24"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kaizen_sdk"]
